src/App.css
#root {
  margin: 0 auto;
  max-width: 1280px;
  position: relative;
  padding: 2rem;
}
.app{
  width: 100%;
}
.navbar {

  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--slate-700);
  padding: 0.5rem 1rem;
  border-radius: 1rem;
  margin-bottom: 1rem;
}

.navbar__logo {
  display:flex;
  justify-content: center;
  align-items: center;
  width: 3rem;
  height: 3rem;
}
.navbar__logo img{
  width: 100%;
  height: auto;
}
.navbar__result {
 display: none;
  color: var(--slate-400);
}

.navbar .heart {
  position: relative;
  color: var(--rose-500);
}
.navbar .heart .icon {
  width: 1.7rem;
  height: 1.7rem;
}
.navbar .heart .badge {
  font-size: 0.7rem;
  position: absolute;
  top: 0;
  right: -6px;
  display: inline-block;
  background-color: var(--rose-500);
  color: #fff;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1px 4px;
}

.main {
  display: flex;
  flex-direction: column;
  /* justify-content: space-between; */
  width: 100%;
  gap: 2rem;
}

.characters-list {
  /* width: 100%; */
  height: 50vh;
  overflow-y: auto;
  
}

.box h2 {
  color: var(--slate-400);
  font-size: 1.2rem;
  margin-bottom: 1rem;
}
.list__item:not(:last-child) {
  margin-bottom: 1.5rem;
}

.list__item {
  display: grid;
  column-gap: 0.5rem;
  grid-template-columns: 4rem 1fr 2rem;
  grid-template-rows: 1fr 1fr;
  background-color: var(--slate-800);
  border-radius: 1rem;
  padding: 0.8rem;
  cursor: pointer;
  transition: all 0.2s ease-out;
}
.list__item:hover {
  background-color: var(--slate-700);
}

.list__item img {
  grid-column: 1/3;
  grid-row: 1/3;
  width: 3rem;
  height: 3rem;
  border-radius: 1rem;
}
.list__item h3 {
  font-size: 0.8rem;
  grid-column: 2/3;
  grid-row: 1/2;
}

.list__item .list-item__info {
  font-size: 0.8rem;
  grid-column: 2/3;
  grid-row: 2/3;
  align-self: center;
}

.list__item .icon {
  width: 1.3rem;
  grid-column: 3/4;
  grid-row: 1/3;
  align-self: center;
}

.icon.red {
  color: var(--rose-500);
}

.name,
.info {
  color: var(--slate-200);
}

.status {
  display: inline-block;
  width: 0.7rem;
  height: 0.7rem;
  border-radius: 50%;
  background-color: var(--green-600);
}

.status.red {
  background-color: var(--rose-600);
}

.character-detail {
  display: flex;
  flex-direction: column;
  background-color: var(--slate-800);
  overflow: hidden;
  border-radius: 0.5rem;
  margin-bottom: 2rem;
}

.character-detail__img {
  width: 100%;
  height: auto;
  max-height: 15rem;
  object-fit: cover;
  object-position: center;
}

.character-detail__info {
  padding: 1rem;
}
.character-detail__info .name {
  font-size: 1rem;
  margin-bottom: 0.2rem;
}
.character-detail__info .info {
  font-size: 0.9rem;
  margin-bottom: 1rem;
}

.character-detail__info .location {
  color: var(--slate-500);
  margin-bottom: 1rem;
}

.character-detail__info .location :last-child {
  font-size:0.8rem;
  margin-top: 0.2rem;
  color: var(--slate-300);
  font-weight: 700;
}

.character-detail__info .actions {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.character-detail__info .actions p {
  color: var(--slate-400);
}

/* character episodes */

.character-episodes {
  /* border: 1px solid var(--slate-300); */
  background-color: var(--slate-800);
  border-radius: 1rem;
  padding: 1rem;
  max-height: 100vh;
  overflow:auto;
}

.character-episodes .title {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.character-episodes .title .icon {
  transition: all 0.3s ease-in-out;
  color: var(--slate-300);
  display: flex;
  align-items: center;
  justify-content: center;
}

.character-episodes h2 {
  font-size: 1.3rem;
  color: var(--slate-400);
  margin-bottom: 0.6rem;
}

.character-episodes li {
  font-size: 0.8rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--slate-200);
  padding: 0.5rem 0;
  /* cursor: pointer; */
}

@media (min-width: 768px) {
  .character-detail {
    flex-direction: row;
  }
  .character-detail__img {
    width: 40%;
  }
  .character-detail__info .actions {
    flex-direction: row;
  }
  .main {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    gap: 2rem;
  }
  .characters-list {
    width: 40%;
  }
  .navbar__result {
    display: block;
   }

   .navbar {
    padding: 1rem;
  }

   .navbar__logo {
   
    width: 5rem;
    height: 5rem;
  }
  .navbar .heart .icon {
    width: 2rem;
    height: 2rem;
  }
  .navbar .heart .badge {
    font-size: 0.9rem;
  }
  .list__item {
    column-gap: 1rem;
  }
  .list__item img {
    width: 4rem;
    height: 4rem;
  }
  .list__item h3 {
    font-size: 1.1rem;
  }
  
  .list__item .list-item__info {
    font-size: 1.1rem;
  }
  
  .list__item .icon {
     width: 1.6rem;
  }
  .characters-list {
    height: 100vh;
    overflow-y: visible;
    
  }
  .character-detail__info .name {
    font-size: 1.3rem;
  }
  .character-episodes h2 {
    font-size: 1.5rem;
  
  }
  .character-detail__info .location :last-child {
    font-size:1rem;
 
  }
  .character-episodes li {
    font-size: 1rem;
  }
}


.white{
  background-color: brown;
  color: white;
  padding: 1rem;
}

